--- a/Módulo 3 - PHP/Aula20VariaveisTiposDados/estilos/styleCadastrar.css
+++ b/Módulo 3 - PHP/Aula20VariaveisTiposDados/estilos/styleCadastrar.css
@@ -97,7 +97,7 @@ input[type="submit"]:hover {
 }
 
 .sucesso {
-    background-color: #d4edda;
+    background-color: #5bdb79;
     color: #155724;
 }
 
