--- a/Módulo 3 - PHP/Aula20VariaveisTiposDados/estilos/styleVerificar.css
+++ b/Módulo 3 - PHP/Aula20VariaveisTiposDados/estilos/styleVerificar.css
@@ -144,6 +144,7 @@ table {
     border-radius: 6px;
     text-align: center;
     font-weight: bold;
+    background-color: darkgreen;
 }
 
 .erro {
